Fixed card about sesquilinear forms and their corresponding matrices
and tweaked the layout of some other cards a bit

--- a/LinA2Cards.tex
+++ b/LinA2Cards.tex
@@ -389,12 +389,12 @@
     \begin{field} %Lücke 1
         Eine \textbf{Sesquilinearform} \(\eta\) auf einem \(\CC\)-Vektorraum \(V\) ist eine Abbildung \(\eta\colon V\times V \longrightarrow \CC\) mit folgenden Eigenschaften:
         \begin{itemize}
-            \item \hide{\(\eta\) ist linear in der ersten Koordinate:
-                \[\eta(\vec{v}_1+s\vec{v}_2, \vec{w}) = \eta(\vec{v}_1, \vec{w}) + s\cdot \eta(\vec{v}_2,\vec{w})\]
+            \item \hide{\(\eta\) ist linear in der ersten Koordinate:\\
+                \(\eta(\vec{v}_1+s\vec{v}_2, \vec{w}) = \eta(\vec{v}_1, \vec{w}) + s\cdot \eta(\vec{v}_2,\vec{w})\)\\
                 für alle \(\vec{v_1, v_2, w} \in V\) und alle \(s\in\CC\)}
-            \item \(\eta\) ist semilinear in der zweiten Koordinate:
-                \[\eta(\vec{v}, \vec{w}_1+\vec{w}_2) = \eta(\vec{v}, \vec{w}_1) + \eta(\vec{v},\vec{w}_2)\]
-                \[\eta(\vec{v}, s\vec{w}) = \bar{s}\cdot \eta(\vec{v},\vec{w})\]
+            \item \(\eta\) ist semilinear in der zweiten Koordinate:\\
+                \(\eta(\vec{v}, \vec{w}_1+\vec{w}_2) = \eta(\vec{v}, \vec{w}_1) + \eta(\vec{v},\vec{w}_2)\)\\
+                \(\eta(\vec{v}, s\vec{w}) = \bar{s}\cdot \eta(\vec{v},\vec{w})\)\\
                 für alle \(\vec{v, w, w_1, w_2} \in V\) und alle \(s\in\CC\)
         \end{itemize}
     \end{field} 
@@ -402,12 +402,12 @@
     \begin{field} %Antwort 1
         Eine \textbf{Sesquilinearform} \(\eta\) auf einem \(\CC\)-Vektorraum \(V\) ist eine Abbildung \(\eta\colon V\times V \longrightarrow \CC\) mit folgenden Eigenschaften:
         \begin{itemize}
-            \item \(\eta\) ist linear in der ersten Koordinate:
-                \[\eta(\vec{v}_1+s\vec{v}_2, \vec{w}) = \eta(\vec{v}_1, \vec{w}) + s\cdot \eta(\vec{v}_2,\vec{w})\]
+            \item \(\eta\) ist linear in der ersten Koordinate:\\
+                \(\eta(\vec{v}_1+s\vec{v}_2, \vec{w}) = \eta(\vec{v}_1, \vec{w}) + s\cdot \eta(\vec{v}_2,\vec{w})\)\\
                 für alle \(\vec{v_1, v_2, w} \in V\) und alle \(s\in\CC\)
-            \item \(\eta\) ist semilinear in der zweiten Koordinate:
-                \[\eta(\vec{v}, \vec{w}_1+\vec{w}_2) = \eta(\vec{v}, \vec{w}_1) + \eta(\vec{v},\vec{w}_2)\]
-                \[\eta(\vec{v}, s\vec{w}) = \bar{s}\cdot \eta(\vec{v},\vec{w})\]
+            \item \(\eta\) ist semilinear in der zweiten Koordinate:\\
+                \(\eta(\vec{v}, \vec{w}_1+\vec{w}_2) = \eta(\vec{v}, \vec{w}_1) + \eta(\vec{v},\vec{w}_2)\)\\
+                \(eta(\vec{v}, s\vec{w}) = \bar{s}\cdot \eta(\vec{v},\vec{w})\)\\
                 für alle \(\vec{v, w, w_1, w_2} \in V\) und alle \(s\in\CC\)
         \end{itemize}
         \cite{Def. 10.10}
@@ -416,24 +416,24 @@
     \begin{field} %Lücke 2
         Eine \textbf{Sesquilinearform} \(\eta\) auf einem \(\CC\)-Vektorraum \(V\) ist eine Abbildung \(\eta\colon V\times V \longrightarrow \CC\) mit folgenden Eigenschaften:
         \begin{itemize}
-            \item \(\eta\) ist linear in der ersten Koordinate:
-                \[\eta(\vec{v}_1+s\vec{v}_2, \vec{w}) = \eta(\vec{v}_1, \vec{w}) + s\cdot \eta(\vec{v}_2,\vec{w})\]
+            \item \(\eta\) ist linear in der ersten Koordinate:\\
+                \(\eta(\vec{v}_1+s\vec{v}_2, \vec{w}) = \eta(\vec{v}_1, \vec{w}) + s\cdot \eta(\vec{v}_2,\vec{w})\)\\
                 für alle \(\vec{v_1, v_2, w} \in V\) und alle \(s\in\CC\)
-            \item \hide{\(\eta\) ist semilinear in der zweiten Koordinate:
-                \[\eta(\vec{v}, \vec{w}_1+\vec{w}_2) = \eta(\vec{v}, \vec{w}_1) + \eta(\vec{v},\vec{w}_2)\]
-                \[\eta(\vec{v}, s\vec{w}) = \bar{s}\cdot \eta(\vec{v},\vec{w})\]
+            \item \hide{\(\eta\) ist semilinear in der zweiten Koordinate:\\
+                \(\eta(\vec{v}, \vec{w}_1+\vec{w}_2) = \eta(\vec{v}, \vec{w}_1) + \eta(\vec{v},\vec{w}_2)\)\\
+                \(\eta(\vec{v}, s\vec{w}) = \bar{s}\cdot \eta(\vec{v},\vec{w})\)\\
                 für alle \(\vec{v, w, w_1, w_2} \in V\) und alle \(s\in\CC\)}
         \end{itemize}
     \end{field}
     \begin{field} %Antwort
         Eine \textbf{Sesquilinearform} \(\eta\) auf einem \(\CC\)-Vektorraum \(V\) ist eine Abbildung \(\eta\colon V\times V \longrightarrow \CC\) mit folgenden Eigenschaften:
         \begin{itemize}
-            \item \(\eta\) ist linear in der ersten Koordinate:
-                \[\eta(\vec{v}_1+s\vec{v}_2, \vec{w}) = \eta(\vec{v}_1, \vec{w}) + s\cdot \eta(\vec{v}_2,\vec{w})\]
+            \item \(\eta\) ist linear in der ersten Koordinate:\\
+                \(\eta(\vec{v}_1+s\vec{v}_2, \vec{w}) = \eta(\vec{v}_1, \vec{w}) + s\cdot \eta(\vec{v}_2,\vec{w})\)\\
                 für alle \(\vec{v_1, v_2, w} \in V\) und alle \(s\in\CC\)
-            \item\(\eta\) ist semilinear in der zweiten Koordinate:
-                \[\eta(\vec{v}, \vec{w}_1+\vec{w}_2) = \eta(\vec{v}, \vec{w}_1) + \eta(\vec{v},\vec{w}_2)\]
-                \[\eta(\vec{v}, s\vec{w}) = \bar{s}\cdot \eta(\vec{v},\vec{w})\]
+            \item\(\eta\) ist semilinear in der zweiten Koordinate:\\
+                \(\eta(\vec{v}, \vec{w}_1+\vec{w}_2) = \eta(\vec{v}, \vec{w}_1) + \eta(\vec{v},\vec{w}_2)\)\\
+                \(\eta(\vec{v}, s\vec{w}) = \bar{s}\cdot \eta(\vec{v},\vec{w})\)\\
                 für alle \(\vec{v, w, w_1, w_2} \in V\) und alle \(s\in\CC\)
         \end{itemize}
         \cite{Def. 10.10}
@@ -453,11 +453,11 @@
     \xplain{bd8dcf48-bc10-11ec-8422-0242ac120002}
     
     \xfield{
-        Die darstellende Matrix \(M(\eta)\) zu einer Sesquilinearform \(\eta\) hat die Form \dots
+        Jede Sesquilinearform \(\eta\) liefert eine Matrix der Form \dots
     }
     \begin{field}
-        Die darstellende Matrix \(M(\eta)\) zu einer Sesquilinearform \(\eta\) hat die Form
-        \[M(\eta)\colon = (\eta(\vec{e}_i, \vec{e}_j)_{ij}\]
+        Jede Sesquilinearform \(\eta\) liefert eine Matrix \(M(\eta) \in \Mat_{\CC}(n\times n)\) der Form
+        \[M(\eta)\colon = \eta(\vec{e}_i, \vec{e}_j)_{ij}\]
         \cite{Satz 10.11}
     \end{field}
     
