--- a/LinA2Cards.tex
+++ b/LinA2Cards.tex
@@ -263,7 +263,7 @@
     \end{field}
     \begin{field}
     Jede Bilinearform \(\beta\) auf \(K^n\) liefert eine Matrix \(M(\beta)\in \Mat_K(n\times n)\) der Gestalt
-    \[M(\beta)\colon = \beta(\vec{e}_i, \vec{e}_j)_{ij}\] \cite{Satz ~10.2}
+    \[M(\beta) := \beta(\vec{e}_i, \vec{e}_j)_{ij}\] \cite{Satz ~10.2}
     \end{field}
     \begin{field}
     Jede Matrix \(A\in\Mat_K(n\times n)\) liefert eine \hide{Bilinearform auf \(K^n\)} wie folgt:
@@ -289,10 +289,10 @@
     \tags{Def}
     \xplain{51387522-ba4a-11ec-8422-0242ac120002}
     \begin{field}
-    Die \textbf{darstellende Matrix} einer Bilinearform \(\beta\) bezüglich einer Basis \(B\) ist gegeben durch \hide{\[M_B(\beta)\colon = \beta(\vec{b}_i, \vec{b}_j)_{ij}\]}
+    Die \textbf{darstellende Matrix} einer Bilinearform \(\beta\) bezüglich einer Basis \(B=(\vec{b}_i)_i\) ist gegeben durch \hide{\[M_B(\beta)\colon = \beta(\vec{b}_i, \vec{b}_j)_{ij}\]}
     \end{field}
     \begin{field}
-    Die \textbf{darstellende Matrix} einer Bilinearform \(\beta\) bezüglich einer Basis \(B\) ist gegeben durch
+    Die \textbf{darstellende Matrix} einer Bilinearform \(\beta\) bezüglich einer Basis \(B(\vec{b}_i)_i\) ist gegeben durch
     \[M_B(\beta)\colon = \beta(\vec{b}_i, \vec{b}_j)_{ij}\]
     \cite{Def. ~10.3}
     \end{field}
@@ -377,7 +377,7 @@
         Eine Bilinearform \(\beta\) ist \textbf{alternierend} genau dann, wenn für ihre darstellende Matrix \(M(\beta)\) gilt:
         \[M(\beta)^T = -M(\beta)\]
         und
-        \[M_{ii} = 0 \text{ für alle }i\]
+        \[M(\beta)_{ii} = 0 \text{ für alle }i\]
         \cite{Satz 10.9}
     \end{field}
 \end{note}
