--- a/LinA2Cards.tex
+++ b/LinA2Cards.tex
@@ -292,7 +292,7 @@
     Die \textbf{darstellende Matrix} einer Bilinearform \(\beta\) bezüglich einer Basis \(B=(\vec{b}_i)_i\) ist gegeben durch \hide{\[M_B(\beta)\colon = \beta(\vec{b}_i, \vec{b}_j)_{ij}\]}
     \end{field}
     \begin{field}
-    Die \textbf{darstellende Matrix} einer Bilinearform \(\beta\) bezüglich einer Basis \(B(\vec{b}_i)_i\) ist gegeben durch
+    Die \textbf{darstellende Matrix} einer Bilinearform \(\beta\) bezüglich einer Basis \(B=(\vec{b}_i)_i\) ist gegeben durch
     \[M_B(\beta)\colon = \beta(\vec{b}_i, \vec{b}_j)_{ij}\]
     \cite{Def. ~10.3}
     \end{field}
